general site update

--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@
 title: thomas jurczyk
 email: contact@thomas-jurczyk.com
 description: >- # this means to ignore newlines until "baseurl:"
-  phd student. history and study of religions. greco-roman religions. early christianity.
-  early armenian church history. iconoclasm. digital tools and methods.
+  phd. history and study of religions. greco-roman religions. early christianity.
+  early armenian church history. iconoclasm. digital tools and methods. 
 
 #baseurl: "home_page" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
