--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   phd. history and study of religions. greco-roman religions. early christianity.
   early armenian church history. iconoclasm. digital tools and methods. 
 
-#baseurl: /home_page # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+#baseurl: /arelinco # the subpath of your site, e.g. /blog
+#url: https://www.ruhr-uni-bochum.de # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: Juritho
 github_username:  thomjur
 
