--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,15 @@ title: thomas jurczyk
 email: contact@thomas-jurczyk.com
 description: >- # this means to ignore newlines until "baseurl:"
   phd. history and study of religions. greco-roman religions. early christianity.
-  early armenian church history. iconoclasm. digital tools and methods. 
+  early armenian church history. iconoclasm. digital tools and methods.
+
+header_pages:
+  - index.markdown
+  - projects.md
+  - presentations.md
+  - publications.md
+  - cv.md
+  - about.markdown
 
 #baseurl: /arelinco # the subpath of your site, e.g. /blog
 #url: https://www.ruhr-uni-bochum.de # the base hostname & protocol for your site, e.g. http://example.com
