--- a/_config.yml
+++ b/_config.yml
@@ -19,10 +19,9 @@
 # in the templates via {{ site.myvariable }}.
 
 title: thomas jurczyk
-email: contact@thomas-jurczyk.com
+email: thomas.jurczyk-q88 _at_ rub.de
 description: >- # this means to ignore newlines until "baseurl:"
-  phd. history and study of religions. greco-roman religions. early christianity.
-  early armenian church history. iconoclasm. digital tools and methods.
+  history and study of religions. an/iconism. digital tools and methods.
 
 header_pages:
   - index.markdown
